@@ -52,6 +52,7 @@ Fixed
 - Downloads are now hidden properly when the browser is in fullscreen mode.
 - Crash when setting `colors.webpage.bg` to an empty value with QtWebKit.
 - Crash when the history database file is not a proper sqlite database.
+- Workaround for missing/broken error pages on Debian.
 
 v1.8.1 (2019-09-27)
 -------------------
